# gpui-component

./: .gitignore  .theme-schema.json  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/hello_world/: Cargo.toml
crates/macros/: Cargo.toml
crates/reqwest_client/: Cargo.toml
crates/reqwest_client/src/: reqwest_client.rs
crates/story/: Cargo.toml
crates/story/examples/: code-editor.rs  editor.rs  large-text.rs  markdown.rs  webview.rs
crates/story/examples/fixtures/: completion_items.json  test.rs
crates/story/src/: accordion_story.rs  alert_story.rs  app_menus.rs  assets.rs  button_story.rs  chart_story.rs  clipboard_story.rs  date_picker_story.rs  description_list_story.rs  drawer_story.rs  dropdown_story.rs  form_story.rs  group_box_story.rs  icon_story.rs  image_story.rs  indicator_story.rs  input_story.rs  kbd_story.rs  label_story.rs  lib.rs  list_story.rs  main.rs  menu_story.rs  modal_story.rs  notification_story.rs  number_input_story.rs  popover_story.rs  progress_story.rs  radio_story.rs  resizable_story.rs  scrollable_story.rs  sidebar_story.rs  slider_story.rs  switch_story.rs  table_story.rs  tabs_story.rs  textarea_story.rs  themes.rs  title_bar.rs  toggle_story.rs  (+3 more)
crates/ui/: Cargo.toml
crates/ui/locales/: ui.yml
crates/ui/src/: actions.rs  checkbox.rs  clipboard.rs  color_picker.rs  divider.rs  drawer.rs  dropdown.rs  form.rs  inspector.rs  kbd.rs  lib.rs  modal.rs  popover.rs  radio.rs  root.rs  styled.rs  tag.rs  virtual_list.rs  webview.rs  window_border.rs
crates/webview/: Cargo.toml  README.md
crates/wef/: Cargo.toml  README.md  build.rs
crates/wef/tool/: Cargo.toml
crates/wef/tool/src/: add_cef_framework.rs  add_helper.rs  cef_platform.rs  download_cef.rs  init.rs  main.rs  utils.rs
crates/wef/tool/src/commands/: build.rs  mod.rs  run.rs
crates/wef/tool/src/internal/: add_helper.rs  plist.rs
themes/: alduin.json  ayu.json  catppuccin.json  default.json  gruvbox.json  hybrid.json  macos-classic.json  mandarin-square.json  mellifluous.json  molokai.json  solarized.json
(+116 files in other folders)
