[package]
name = "wef-tool"
version = "0.1.0"
edition = "2024"
authors = ["sunli <scott_s829@163.com>"]
license = "Apache-2.0"
homepage = "https://github.com/longbridge/gpui-component"
repository = "https://github.com/longbridge/gpui-component"

[dependencies]
clap = { version = "4.5.38", features = ["derive", "env"] }
plist = "1.7.1"
tempfile = "3.20.0"
anyhow = "1.0.98"
askama = { version = "0.14.0", features = ["code-in-doc"] }
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
colored = "3.0.0"
fs_extra = "1.3.0"
